--- a/package.json
+++ b/package.json
@@ -42,5 +42,13 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/karolinarojecka/dark_module.git"
+  },
+  "bugs": {
+    "url": "https://github.com/karolinarojecka/dark_module/issues"
+  },
+  "homepage": "https://github.com/karolinarojecka/dark_module#readme"
 }
